Bug 124951 - 'Open' button on Database Wizard dialog is enabled when it should be disabled
Summary: 'Open' button on Database Wizard dialog is enabled when it should be disabled
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
6.3.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.3.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2019-04-25 11:10 UTC by Drew Jensen
Modified: 2019-05-22 20:30 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Picture of Database Wizard with error state displayed (103.32 KB, image/png)
2019-04-25 11:10 UTC, Drew Jensen
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Drew Jensen 2019-04-25 11:10:25 UTC
Created attachment 151005 [details]
Picture of Database Wizard with error state displayed

Test system Ubuntu 18.04 and Version: 6.3.0.0.alpha0+
Build ID: 65f81f6acdeb03b34033a1c6515618936d5f8eca
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2019-04-23_17:18:14

To reproduce:

1 Start the Database Wizard

ERROR 1 the 'Open' button below 'Open existing database' is enabled always. It should only be enabled when the 'Open existing database' option is selected.

2 Click on the 'Open' button and select an existing database

ERROR 2 The selected database does not open, rather the user is brought back to the Database wizard final page by mistake.


Checked this in 6.2.3 and no problem there, so set as regression. As soon as I update the bibisect repo will perform that and get back with the result.
Comment 1 Xisco Faulí 2019-04-25 13:36:24 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=7df04009b98165f89c89f1e506ebafd2fecc8f5a

author	Noel Grandin <noel.grandin@collabora.co.uk>	2019-02-08 11:55:18 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	2019-02-11 07:00:35 +0100
commit 7df04009b98165f89c89f1e506ebafd2fecc8f5a (patch)
tree 5629b360bd669d458dcfa0e3da7e7ce44c194363
parent eb5e2dea18835df78872a8b0e3446e604f749645 (diff)
remove ControlDependencyManager

Bisected with: bibisect-linux64-6.3

Adding Cc: to Noel Grandin
Comment 2 Commit Notification 2019-05-18 19:48:31 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/1f3d18445cad89a8ab572028f2bc1b54914893e5%5E%21

tdf#124951 Open button on Database Wizard dialog is enabled..

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Xisco Faulí 2019-05-20 09:38:17 UTC
Hi Noel, the issue is not 100% fixed in

Version: 6.3.0.0.alpha1+
Build ID: 9c7fac47aacb0877c7d212217089a680400c1377
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

Steps to reproduce:
1. Start database wizard -> Open button is disabled (OK)
2. Select 'Opening an existing database file' -> Open button is enabled (OK)
3. Select 'Create a new database' -> Open button is enabled (KO)

it should get disabled
Comment 4 Xisco Faulí 2019-05-22 14:22:09 UTC
Patch in gerrit: https://gerrit.libreoffice.org/#/c/72783/
Comment 5 Commit Notification 2019-05-22 20:30:16 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/9b6a9a1f50a6d7326e97b02618e9bd5e44fb5832%5E%21

tdf#124951: Enable children depending on parent

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.