tdf#124951 Open button on Database Wizard dialog is enabled..

..when it should be disabled

regression from
    commit 7df04009b98165f89c89f1e506ebafd2fecc8f5a
    Date:   Fri Feb 8 11:55:18 2019 +0200
    remove ControlDependencyManager

Change-Id: Ic84d8c8a5f0615753e323d3aa1e9da0d0c76bb42
Reviewed-on: https://gerrit.libreoffice.org/72532
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
Tested-by: Noel Grandin <noel.grandin@collabora.co.uk>